UI: Fix Toolbar Alignment & Header Underline

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,7 +82,6 @@ h6 {
 /* Bolt/Dynamic Underline */
 .bolt-underline {
   position: relative;
-  display: inline-block;
   z-index: 10;
 }
 
